--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "build": "nx build"
   },
   "private": true,
   "dependencies": {
@@ -34,26 +33,20 @@
     "@angular/language-service": "~18.0.0",
     "@nx/eslint": "19.4.3",
     "@nx/eslint-plugin": "19.4.3",
-    "@nx/jest": "19.4.3",
     "@nx/js": "19.4.3",
     "@nx/workspace": "19.4.3",
     "@schematics/angular": "~18.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "@typescript-eslint/utils": "^8.0.0-alpha.28",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~14.1.0",
     "nx": "19.4.3",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2"
   },
