--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@ethanelliott.ca/source",
   "version": "0.0.0",
-  "license": "MIT",
   "scripts": {
     "start": "nx serve",
     "build": "nx build"
@@ -9,10 +8,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.0.0",
+    "@angular/cdk": "~18.1.0",
     "@angular/common": "~18.0.0",
     "@angular/compiler": "~18.0.0",
     "@angular/core": "~18.0.0",
     "@angular/forms": "~18.0.0",
+    "@angular/material": "~18.1.0",
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
@@ -31,6 +32,7 @@
     "@angular/cli": "~18.0.0",
     "@angular/compiler-cli": "~18.0.0",
     "@angular/language-service": "~18.0.0",
+    "@angular/material": "^18.1.0",
     "@nx/eslint": "19.4.3",
     "@nx/eslint-plugin": "19.4.3",
     "@nx/js": "19.4.3",
@@ -49,7 +51,6 @@
     "nx": "19.4.3",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.2",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2"
   },
