--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular/cli": "~18.0.0",
     "@angular/compiler-cli": "~18.0.0",
     "@angular/language-service": "~18.0.0",
-    "@angular/material": "^18.1.0",
+    "@angular/material": "~18.1.0",
     "@nx/eslint": "19.4.3",
     "@nx/eslint-plugin": "19.4.3",
     "@nx/js": "19.4.3",
