--- a/apps/ethanelliott.ca/.eslintrc.json
+++ b/apps/ethanelliott.ca/.eslintrc.json
@@ -24,7 +24,8 @@
             "prefix": "ee",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "@angular-eslint/prefer-standalone": "off"
       }
     },
     {
