--- a/package.json
+++ b/package.json
@@ -7,52 +7,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~18.0.0",
-    "@angular/cdk": "~18.1.0",
-    "@angular/common": "~18.0.0",
-    "@angular/compiler": "~18.0.0",
-    "@angular/core": "~18.0.0",
-    "@angular/forms": "~18.0.0",
-    "@angular/material": "~18.1.0",
-    "@angular/platform-browser": "~18.0.0",
-    "@angular/platform-browser-dynamic": "~18.0.0",
-    "@angular/router": "~18.0.0",
-    "@nx/angular": "19.4.3",
+    "@angular/animations": "19.2.11",
+    "@angular/cdk": "19.2.16",
+    "@angular/common": "19.2.11",
+    "@angular/compiler": "19.2.11",
+    "@angular/core": "19.2.11",
+    "@angular/forms": "19.2.11",
+    "@angular/platform-browser": "19.2.11",
+    "@angular/platform-browser-dynamic": "19.2.11",
+    "@angular/router": "19.2.11",
+    "@nx/angular": "21.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.0.0",
-    "@angular-devkit/core": "~18.0.0",
-    "@angular-devkit/schematics": "~18.0.0",
-    "@angular-eslint/eslint-plugin": "^18.0.1",
-    "@angular-eslint/eslint-plugin-template": "^18.0.1",
-    "@angular-eslint/template-parser": "^18.0.1",
-    "@angular/cli": "~18.0.0",
-    "@angular/compiler-cli": "~18.0.0",
-    "@angular/language-service": "~18.0.0",
-    "@angular/material": "~18.1.0",
-    "@nx/eslint": "19.4.3",
-    "@nx/eslint-plugin": "19.4.3",
-    "@nx/js": "19.4.3",
-    "@nx/workspace": "19.4.3",
-    "@schematics/angular": "~18.0.0",
+    "@angular-devkit/build-angular": "19.2.9",
+    "@angular-devkit/core": "19.2.9",
+    "@angular-devkit/schematics": "19.2.9",
+    "@angular-eslint/eslint-plugin": "19.4.0",
+    "@angular-eslint/eslint-plugin-template": "19.4.0",
+    "@angular-eslint/template-parser": "19.4.0",
+    "@angular/cli": "~19.2.0",
+    "@angular/compiler-cli": "19.2.11",
+    "@angular/language-service": "19.2.11",
+    "@angular/material": "19.2.16",
+    "@nx/eslint": "21.0.3",
+    "@nx/eslint-plugin": "21.0.3",
+    "@nx/js": "21.0.3",
+    "@nx/workspace": "21.0.3",
+    "@schematics/angular": "19.2.9",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
-    "@typescript-eslint/utils": "^8.0.0-alpha.28",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "7.18.0",
     "autoprefixer": "^10.4.0",
     "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "nx": "19.4.3",
+    "eslint-config-prettier": "10.1.5",
+    "nx": "21.0.3",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
+    "typescript": "5.7.3"
   },
   "nx": {
     "includedScripts": []
