--- a/package.json
+++ b/package.json
@@ -19,9 +19,25 @@
     "@angular/platform-browser": "19.2.11",
     "@angular/platform-browser-dynamic": "19.2.11",
     "@angular/router": "19.2.11",
+    "@fastify/autoload": "~6.0.3",
+    "@fastify/circuit-breaker": "^4.0.2",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/rate-limit": "^10.3.0",
+    "@fastify/sensible": "~6.0.2",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
+    "@fastify/under-pressure": "^9.0.3",
     "@nx/angular": "21.0.3",
+    "@scalar/fastify-api-reference": "^1.31.4",
+    "fastify": "~5.2.1",
+    "fastify-metrics": "^12.1.0",
+    "fastify-plugin": "~5.0.1",
+    "fastify-type-provider-zod": "^4.0.2",
+    "prom-client": "^15.1.3",
     "rxjs": "~7.8.2",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.2.9",
@@ -34,9 +50,11 @@
     "@angular/compiler-cli": "19.2.11",
     "@angular/language-service": "19.2.11",
     "@angular/material": "19.2.16",
+    "@nx/esbuild": "21.0.3",
     "@nx/eslint": "21.0.3",
     "@nx/eslint-plugin": "21.0.3",
     "@nx/js": "21.0.3",
+    "@nx/node": "21.0.3",
     "@nx/workspace": "21.0.3",
     "@schematics/angular": "19.2.9",
     "@swc-node/register": "~1.9.2",
@@ -47,6 +65,7 @@
     "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "7.18.0",
     "autoprefixer": "^10.4.21",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.1",
     "eslint-config-prettier": "10.1.5",
     "nx": "21.0.3",
