chore: better di

--- a/apps/server/project.json
+++ b/apps/server/project.json
@@ -29,8 +29,10 @@
         "development": {},
         "production": {
           "generateLockfile": true,
+          "thirdParty": false,
           "esbuildOptions": {
             "sourcemap": false,
+            "bundle": true,
             "outExtension": {
               ".js": ".js"
             }
