--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "nx": "21.0.3",
     "postcss": "^8.5.3",
     "prettier": "^2.8.8",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "10.9.1",
     "typescript": "5.7.3"
   },
