--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nx/angular": "21.0.3",
     "@scalar/fastify-api-reference": "^1.31.4",
     "fastify": "~5.2.1",
+    "fastify-graceful-shutdown": "^4.0.1",
     "fastify-metrics": "^12.1.0",
     "fastify-plugin": "~5.0.1",
     "fastify-type-provider-zod": "^4.0.2",
