--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "@fastify/under-pressure": "^9.0.3",
     "@nx/angular": "21.0.3",
     "@scalar/fastify-api-reference": "^1.31.4",
+    "better-sqlite3": "^12.2.0",
     "fastify": "~5.2.1",
     "fastify-graceful-shutdown": "^4.0.1",
     "fastify-metrics": "^12.1.0",
     "fastify-plugin": "~5.0.1",
     "fastify-type-provider-zod": "^4.0.2",
+    "http-errors": "^2.0.0",
+    "pino-pretty": "^13.1.1",
     "prom-client": "^15.1.3",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
+    "typeorm": "^0.3.25",
     "zod": "^3.25.51"
   },
   "devDependencies": {
@@ -61,6 +65,7 @@
     "@swc-node/register": "~1.9.2",
     "@swc/core": "~1.5.29",
     "@swc/helpers": "~0.5.17",
+    "@types/http-errors": "^2.0.5",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
