--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,9 @@
 onlyBuiltDependencies:
   - '@parcel/watcher'
   - '@swc/core'
+  - better-sqlite3
   - esbuild
   - lmdb
   - msgpackr-extract
   - nx
+  - sqlite3
