--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@nx/eslint-plugin": "21.0.3",
     "@nx/js": "21.0.3",
     "@nx/node": "21.0.3",
+    "@nx/web": "21.0.3",
     "@nx/workspace": "21.0.3",
     "@schematics/angular": "19.2.9",
     "@swc-node/register": "~1.9.2",
