--- a/apps/finances-frontend/project.json
+++ b/apps/finances-frontend/project.json
@@ -13,7 +13,7 @@
         "outputPath": "dist/apps/finances-frontend",
         "index": "apps/finances-frontend/src/index.html",
         "browser": "apps/finances-frontend/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [],
         "tsConfig": "apps/finances-frontend/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
