--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "20.1.4",
     "@fastify/autoload": "~6.0.3",
     "@fastify/circuit-breaker": "^4.0.2",
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
+    "@fastify/jwt": "^9.1.0",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/sensible": "~6.0.2",
     "@fastify/swagger": "^9.5.1",
@@ -30,13 +32,18 @@
     "@fastify/under-pressure": "^9.0.3",
     "@nx/angular": "21.3.11",
     "@scalar/fastify-api-reference": "^1.31.4",
+    "@simplewebauthn/browser": "^13.1.2",
+    "@simplewebauthn/server": "^13.1.2",
+    "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
+    "crypto-js": "^4.2.0",
     "fastify": "~5.2.1",
     "fastify-graceful-shutdown": "^4.0.1",
     "fastify-metrics": "^12.1.0",
     "fastify-plugin": "~5.0.1",
     "fastify-type-provider-zod": "^4.0.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "pino-pretty": "^13.1.1",
     "prom-client": "^15.1.3",
     "rxjs": "~7.8.2",
@@ -68,7 +75,10 @@
     "@swc-node/register": "~1.9.2",
     "@swc/core": "~1.5.29",
     "@swc/helpers": "~0.5.17",
+    "@types/bcrypt": "^6.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/http-errors": "^2.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
