--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "20.1.4",
     "@angular/core": "20.1.4",
     "@angular/forms": "20.1.4",
+    "@angular/material": "~20.1.4",
     "@angular/platform-browser": "20.1.4",
     "@angular/platform-browser-dynamic": "20.1.4",
     "@angular/router": "20.1.4",
@@ -31,6 +32,7 @@
     "@fastify/swagger-ui": "^5.2.3",
     "@fastify/under-pressure": "^9.0.3",
     "@nx/angular": "21.3.11",
+    "@ownid/webauthn": "^1.0.0",
     "@scalar/fastify-api-reference": "^1.31.4",
     "@simplewebauthn/browser": "^13.1.2",
     "@simplewebauthn/server": "^13.1.2",
