--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@scalar/fastify-api-reference": "^1.31.4",
     "@simplewebauthn/browser": "^13.1.2",
     "@simplewebauthn/server": "^13.1.2",
+    "ag-grid-angular": "^34.1.1",
+    "ag-grid-community": "^34.1.1",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
     "crypto-js": "^4.2.0",
