--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@fastify/under-pressure": "^9.0.3",
+    "@fortawesome/angular-fontawesome": "^3.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@ngrx/signals": "^20.0.0",
     "@nx/angular": "21.3.11",
     "@scalar/fastify-api-reference": "^1.31.4",
     "@simplewebauthn/browser": "^13.1.2",
@@ -38,7 +44,9 @@
     "ag-grid-community": "^34.1.1",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
+    "chart.js": "^4.5.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "fastify": "~5.2.1",
     "fastify-graceful-shutdown": "^4.0.1",
     "fastify-metrics": "^12.1.0",
@@ -46,6 +54,7 @@
     "fastify-type-provider-zod": "^4.0.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "ng2-charts": "^8.0.0",
     "pino-pretty": "^13.1.1",
     "prom-client": "^15.1.3",
     "rxjs": "~7.8.2",
