--- a/apps/finances-frontend/project.json
+++ b/apps/finances-frontend/project.json
@@ -22,7 +22,10 @@
             "input": "apps/finances-frontend/public"
           }
         ],
-        "styles": ["apps/finances-frontend/src/styles.scss"],
+        "styles": [
+          "node_modules/@fortawesome/fontawesome-free/css/all.css",
+          "apps/finances-frontend/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
