--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "better-sqlite3": "^12.2.0",
     "chart.js": "^4.5.0",
     "crypto-js": "^4.2.0",
+    "csv-parse": "^6.1.0",
     "date-fns": "^4.1.0",
     "fastify": "~5.2.1",
     "fastify-graceful-shutdown": "^4.0.1",
