--- a/deployments/landing-page/values.yaml
+++ b/deployments/landing-page/values.yaml
@@ -1,15 +1,9 @@
-replicaCount: 1
-
-service:
-  type: ClusterIP
-
-ingress:
-  enabled: true
-  path: /
-  annotations:
-    kubernetes.io/ingress.class: 'nginx'
-  hosts:
-    - host: home.ee
-      paths:
-        - path: /
-          pathType: Prefix
+nginx:
+  replicaCount: 2
+  ingress:
+    enabled: true
+    hosts:
+      - host: home.ee
+        paths:
+          - path: /
+            pathType: Prefix
