--- a/deployments/landing-page/application.yaml
+++ b/deployments/landing-page/application.yaml
@@ -9,6 +9,7 @@ spec:
   project: home
   source:
     repoURL: https://github.com/ethanelliott/ethanelliott.ca.git
+    path: deployments/landing-page
     targetRevision: main
     helm:
       releaseName: landing-page
