--- a/deployments/landing-page/Chart.yaml
+++ b/deployments/landing-page/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: landing-page
-description: A simple Helm chart for deploying NGINX.
+description: My application chart
 type: application
 
 version: 0.0.1
@@ -8,6 +8,5 @@ appVersion: '0.0.1'
 
 dependencies:
   - name: nginx
-    alias: landing-page
     version: '15.1.1'
     repository: 'https://charts.bitnami.com/bitnami'
