--- a/deployments/landing-page/application.yaml
+++ b/deployments/landing-page/application.yaml
@@ -19,6 +19,4 @@ spec:
     server: https://kubernetes.default.svc
     namespace: ethanelliott
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
