--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fastify/under-pressure": "^9.0.3",
     "@nx/angular": "21.0.3",
     "@scalar/fastify-api-reference": "^1.31.4",
+    "deepmerge": "^4.3.1",
     "fastify": "~5.2.1",
     "fastify-graceful-shutdown": "^4.0.1",
     "fastify-metrics": "^12.1.0",
@@ -38,6 +39,7 @@
     "prom-client": "^15.1.3",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
+    "yaml": "^2.8.0",
     "zod": "^3.25.51"
   },
   "devDependencies": {
