deploy now please frfr

--- a/deployments/primary-application.yaml
+++ b/deployments/primary-application.yaml
@@ -14,6 +14,7 @@ spec:
       include: '**/application.yaml'
   destination:
     server: https://kubernetes.default.svc
+    namespace: default
   syncPolicy:
     automated: {}
   ignoreDifferences:
