--- a/deployments/landing-page/application.yaml
+++ b/deployments/landing-page/application.yaml
@@ -16,5 +16,6 @@ spec:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
+    namespace: default
   syncPolicy:
     automated: {}
