--- a/deployments/test-server/Chart.yaml
+++ b/deployments/test-server/Chart.yaml
@@ -6,7 +6,4 @@ type: application
 version: 0.0.1
 appVersion: '0.0.1'
 
-dependencies:
-  - name: node
-    version: '16.18.0'
-    repository: 'https://charts.bitnami.com/bitnami'
+dependencies: []
