--- a/apps/server/project.json
+++ b/apps/server/project.json
@@ -60,7 +60,12 @@
     },
     "docker-build": {
       "dependsOn": ["build"],
-      "command": "docker build -f apps/server/Dockerfile . -t server"
+      "command": "docker build -f apps/server/Dockerfile . -t ethanelliottio/test-server:latest"
+    },
+
+    "docker-push": {
+      "dependsOn": ["docker-build"],
+      "command": "docker push ethanelliottio/test-server:latest"
     }
   }
 }
