more deploying with maybe certs ??

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ COOKIE_SECRET=your-super-secret-cookie-key-change-in-production-please-make-it-l
 
 # WebAuthn Configuration (update for production)
 RP_NAME=Finance App
-RP_ID=localhost
-ORIGIN=http://localhost:4200
+RP_ID=finances.home.ee
+ORIGIN=http://finances.home.ee
 
 # Database
 NODE_ENV=development
