--- a/apps/finances-frontend/nginx.conf
+++ b/apps/finances-frontend/nginx.conf
@@ -1,6 +1,11 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name localhost finances.home.ee;
+    
+    # Redirect HTTP to HTTPS in production
+    if ($host = "finances.home.ee") {
+        return 301 https://$host$request_uri;
+    }
     
     root /usr/share/nginx/html;
     index index.html;
@@ -14,6 +19,44 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+    
+    # Cache static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name finances.home.ee;
+    
+    # SSL Configuration
+    ssl_certificate /etc/ssl/certs/tls.crt;
+    ssl_certificate_key /etc/ssl/private/tls.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    
+    root /usr/share/nginx/html;
+    index index.html;
+    
+    # Handle Angular routing - serve index.html for all routes
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+    
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     
     # Gzip compression
     gzip on;
