--- a/deployments/finances-frontend/values.yaml
+++ b/deployments/finances-frontend/values.yaml
@@ -14,7 +14,11 @@ ingress:
   className: 'nginx'
   annotations:
     kubernetes.io/ingress.class: 'nginx'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
   hostname: 'finances.home.ee'
+  tls:
+    enabled: true
+    secretName: 'finances-frontend-tls'
 
 resources:
   limits:
