--- a/deployments/finances/values.yaml
+++ b/deployments/finances/values.yaml
@@ -14,11 +14,15 @@ ingress:
   className: 'nginx'
   annotations:
     kubernetes.io/ingress.class: 'nginx'
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://finances.home.ee"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, X-Requested-With"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://finances.home.ee'
+    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, POST, PUT, DELETE, OPTIONS'
+    nginx.ingress.kubernetes.io/cors-allow-headers: 'Content-Type, Authorization, X-Requested-With'
+    nginx.ingress.kubernetes.io/enable-cors: 'true'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
   hostname: 'finances-service.home.ee'
+  tls:
+    enabled: true
+    secretName: 'finances-backend-tls'
 
 resources:
   limits:
@@ -29,6 +33,8 @@ resources:
     memory: 256Mi
 
 env:
-  NODE_ENV: "production"
-  HOST: "0.0.0.0"
-  PORT: "3000"
+  NODE_ENV: 'production'
+  HOST: '0.0.0.0'
+  PORT: '3000'
+  RP_ID: 'finances-service.home.ee'
+  ORIGIN: 'https://finances.home.ee'
