--- a/deployments/finances-frontend/values.yaml
+++ b/deployments/finances-frontend/values.yaml
@@ -15,10 +15,10 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: 'nginx'
     nginx.ingress.kubernetes.io/ssl-redirect: 'true'
-  hostname: 'finances.home.ee'
+  hostname: 'finances.elliott.haus'
   tls:
     enabled: true
-    secretName: 'finances-frontend-tls'
+    secretName: 'elliott-haus-wildcard-tls'
 
 resources:
   limits:
