--- a/deployments/finances/values.yaml
+++ b/deployments/finances/values.yaml
@@ -14,15 +14,15 @@ ingress:
   className: 'nginx'
   annotations:
     kubernetes.io/ingress.class: 'nginx'
-    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://finances.home.ee'
+    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://finances.elliott.haus'
     nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, POST, PUT, DELETE, OPTIONS'
     nginx.ingress.kubernetes.io/cors-allow-headers: 'Content-Type, Authorization, X-Requested-With'
     nginx.ingress.kubernetes.io/enable-cors: 'true'
     nginx.ingress.kubernetes.io/ssl-redirect: 'true'
-  hostname: 'finances-service.home.ee'
+  hostname: 'finances-service.elliott.haus'
   tls:
     enabled: true
-    secretName: 'finances-backend-tls'
+    secretName: 'elliott-haus-wildcard-tls'
 
 resources:
   limits:
@@ -36,5 +36,5 @@ env:
   NODE_ENV: 'production'
   HOST: '0.0.0.0'
   PORT: '3000'
-  RP_ID: 'finances-service.home.ee'
-  ORIGIN: 'https://finances.home.ee'
+  RP_ID: 'finances-service.elliott.haus'
+  ORIGIN: 'https://finances.elliott.haus'
