--- a/deployments/finances-frontend/values.yaml
+++ b/deployments/finances-frontend/values.yaml
@@ -27,3 +27,10 @@ resources:
   requests:
     cpu: 100m
     memory: 64Mi
+
+# ConfigMap for nginx configuration
+configMap:
+  enabled: true
+  name: finances-frontend-nginx-config
+  mountPath: /etc/nginx/conf.d/default.conf
+  subPath: nginx.conf
