--- a/deployments/finances-frontend/templates/deployment.yaml
+++ b/deployments/finances-frontend/templates/deployment.yaml
@@ -36,3 +36,15 @@ spec:
             periodSeconds: 5
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          {{- if .Values.configMap.enabled }}
+          volumeMounts:
+            - name: nginx-config
+              mountPath: {{ .Values.configMap.mountPath }}
+              subPath: {{ .Values.configMap.subPath }}
+          {{- end }}
+      {{- if .Values.configMap.enabled }}
+      volumes:
+        - name: nginx-config
+          configMap:
+            name: {{ .Values.configMap.name }}
+      {{- end }}
