--- a/deployments/finances/values.yaml
+++ b/deployments/finances/values.yaml
@@ -38,3 +38,6 @@ env:
   PORT: '3000'
   RP_ID: 'finances-service.elliott.haus'
   ORIGIN: 'https://finances.elliott.haus'
+
+storage:
+  size: 10Gi
