--- a/deployments/monitoring/templates/grafana-dashboards.yaml
+++ b/deployments/monitoring/templates/grafana-dashboards.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: otel-dashboards
-  namespace: { { .Release.Namespace } }
+  namespace: {{ .Release.Namespace }}
   labels:
-    grafana_dashboard: '1'
+    grafana_dashboard: "1"
 data:
   # OpenTelemetry Collector Dashboard
   otel-collector-dashboard.json: |
@@ -59,7 +59,7 @@ data:
       }
     }
 
-  # Kubernetes Overview Dashboard
+  # Kubernetes Overview Dashboard  
   kubernetes-overview.json: |
     {
       "dashboard": {
