--- a/deployments/statping/values.yaml
+++ b/deployments/statping/values.yaml
@@ -14,11 +14,10 @@ statping:
     className: 'nginx'
     annotations:
       kubernetes.io/ingress.class: 'nginx'
-      nginx.ingress.kubernetes.io/ssl-redirect: 'true'
-    hosts:
-      - host: statping.elliott.haus
     tls:
-      secretName: 'elliott-haus-wildcard-tls'
+      - hosts:
+          - statping.elliott.haus
+        secretName: 'elliott-haus-wildcard-tls'
   resources:
     limits:
       cpu: 200m
