--- a/deployments/statping/values.yaml
+++ b/deployments/statping/values.yaml
@@ -12,12 +12,12 @@ statping:
   ingress:
     enabled: true
     className: 'nginx'
+    secretName: 'elliott-haus-wildcard-tls'
     annotations:
       kubernetes.io/ingress.class: 'nginx'
-    tls:
-      - hosts:
-          - statping.elliott.haus
-        secretName: 'elliott-haus-wildcard-tls'
+    tls: true
+    hostname: statping.elliott.haus
+
   resources:
     limits:
       cpu: 200m
