--- a/deployments/test-server/templates/service.yaml
+++ b/deployments/test-server/templates/service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "test-server.fullname" . }}
   labels:
     {{- include "test-server.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+{{ toYaml . | indent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
