--- a/deployments/test-server/values.yaml
+++ b/deployments/test-server/values.yaml
@@ -8,6 +8,10 @@ image:
 service:
   type: ClusterIP
   port: 3000
+  annotations:
+    prometheus.io/scrape: 'true'
+    prometheus.io/path: /metrics
+    prometheus.io/port: '3000'
 
 ingress:
   enabled: true
