--- a/deployments/monitoring/templates/additional-scrape-config-secret.yaml
+++ b/deployments/monitoring/templates/additional-scrape-config-secret.yaml
@@ -1,17 +1,17 @@
-{{- if .Values.additionalScrapeConfigs.create }}
+{{- if .Values.additionalScrapeConfigsSecret.create }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.additionalScrapeConfigs.name | default "monitoring-additional-scrape-config" }}
+  name: {{ .Values.additionalScrapeConfigsSecret.name | default "monitoring-additional-scrape-config" }}
   labels:
 {{ include "monitoring.labels" . | indent 4 }}
   annotations:
     monitoring.elliott.haus/managed-by: gitops
     monitoring.elliott.haus/purpose: annotation-discovery
 stringData:
-  {{ .Values.additionalScrapeConfigs.key | default "scrape-config.yaml" }}: |
-{{- if .Values.additionalScrapeConfigs.data }}
-{{ .Values.additionalScrapeConfigs.data | indent 4 }}
+  {{ .Values.additionalScrapeConfigsSecret.key | default "scrape-config.yaml" }}: |
+{{- if .Values.additionalScrapeConfigsSecret.data }}
+{{ .Values.additionalScrapeConfigsSecret.data | indent 4 }}
 {{- else }}
 {{- /* Fallback to sensible defaults if data not provided */ -}}
 {{ include "monitoring.defaultScrapeConfig" . | indent 4 }}
