--- a/deployments/monitoring/templates/dashboards-configmap.yaml
+++ b/deployments/monitoring/templates/dashboards-configmap.yaml
@@ -1,25 +1,23 @@
+{{- $dashboards := .Values.dashboards | default (list) }}
+{{- range $index, $file := $dashboards }}
+{{- $path := printf "dashboards/%s" $file }}
+{{- $content := required (printf "dashboard file %s not found" $path) ($.Files.Get $path) }}
+{{- if gt $index 0 }}
+---
+{{- end }}
 apiVersion: v1
-kind: List
-items:
-{{- range $index, $file := .Values.dashboards }}
-{{- $path := printf "dashboards/%s" $file -}}
-{{- $matches := $.Files.Glob $path -}}
-{{- if not $matches }}
-{{- fail (printf "dashboard file %s not found" $path) -}}
+kind: ConfigMap
+metadata:
+  name: {{ include "monitoring.dashboardConfigMapName" (dict "file" $file "context" $) }}
+  labels:
+    {{- include "monitoring.labels" $ | nindent 4 }}
+    grafana_dashboard: "true"
+  annotations:
+    grafanaFolder: cluster
+    dashboards.monitoring.elliott.haus/origin: "git"
+    dashboards.monitoring.elliott.haus/file: {{ $file | quote }}
+data:
+  {{ $file }}: |
+{{ $content | indent 4 }}
 {{- end }}
-{{- $content := $.Files.Get $path -}}
-  - apiVersion: v1
-    kind: ConfigMap
-    metadata:
-      name: {{ include "monitoring.dashboardConfigMapName" (dict "file" $file "context" $) }}
-      labels:
-        {{- include "monitoring.labels" $ | nindent 8 }}
-        grafana_dashboard: "true"
-      annotations:
-        grafanaFolder: cluster
-        dashboards.monitoring.elliott.haus/origin: "git"
-        dashboards.monitoring.elliott.haus/file: {{ $file | quote }}
-    data:
-      {{ $file }}: |
 {{ $content | indent 8 }}
-{{- end }}
