--- a/deployments/monitoring/values.yaml
+++ b/deployments/monitoring/values.yaml
@@ -28,7 +28,10 @@ kube-prometheus-stack:
       dashboards:
         enabled: true
         label: grafana_dashboard
+        labelValue: '1'
         folder: /tmp/dashboards/Kubernetes
+        provider:
+          folder: Kubernetes
         searchNamespace: ALL
 
   prometheus:
