--- a/deployments/monitoring/templates/dashboards-configmaps.yaml
+++ b/deployments/monitoring/templates/dashboards-configmaps.yaml
@@ -1,194 +1,24 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: monitoring-cluster-overview-dashboard
-  labels:
-    grafana_dashboard: '1'
-data:
-  cluster-overview.json: |-
-    {
-      "title": "Kubernetes Cluster Overview",
-      "uid": "cluster-overview",
-      "schemaVersion": 38,
-      "version": 1,
-      "refresh": "30s",
-      "panels": [
-        {
-          "type": "stat",
-          "title": "Nodes",
-          "id": 1,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [{ "expr": "count(kube_node_info)" }]
-        },
-        {
-          "type": "stat",
-          "title": "Pods",
-          "id": 2,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [{ "expr": "count(kube_pod_info)" }]
-        },
-        {
-          "type": "graph",
-          "title": "Cluster CPU (5m rate)",
-          "id": 3,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [
-            { "expr": "sum(rate(node_cpu_seconds_total{mode!='idle'}[5m]))" }
-          ]
-        },
-        {
-          "type": "graph",
-          "title": "Cluster Memory Used",
-          "id": 4,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [
-            {
-              "expr": "sum(node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes)"
-            }
-          ]
-        }
-      ],
-      "templating": { "list": [] }
-    }
+{{- $root := . }}
+{{- $files := sortAlpha (keys (.Files.Glob "dashboards/*.json")) }}
+{{- if $files }}
+{{- $dashboardLabelKey := default "grafana_dashboard" (dig "kube-prometheus-stack" "grafana" "sidecar" "dashboards" "label" $root.Values) }}
+{{- $dashboardLabelValue := default "1" (dig "kube-prometheus-stack" "grafana" "sidecar" "dashboards" "labelValue" $root.Values) }}
+{{- range $index, $path := $files }}
+{{- if gt $index 0 }}
 ---
+{{- end }}
+{{- $basename := trimSuffix ".json" (base $path) }}
+{{- $sanitized := regexReplaceAll "[^a-z0-9-]" "-" (lower $basename) }}
+{{- $configMapName := printf "%s-dashboard-%s" (include "monitoring.fullname" $root) $sanitized | trunc 63 | trimSuffix "-" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: monitoring-nodes-resources-dashboard
+  name: {{ $configMapName }}
   labels:
-    grafana_dashboard: '1'
+    {{- include "monitoring.labels" $root | nindent 4 }}
+    {{ $dashboardLabelKey }}: {{ $dashboardLabelValue | quote }}
 data:
-  nodes-resources.json: |-
-    {
-      "title": "Node Resources",
-      "uid": "nodes-resources",
-      "schemaVersion": 38,
-      "version": 1,
-      "refresh": "30s",
-      "panels": [
-        {
-          "type": "table",
-          "title": "CPU Usage % per Node",
-          "id": 10,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [
-            {
-              "expr": "100 - (avg by (instance) (rate(node_cpu_seconds_total{mode='idle'}[5m])) * 100)"
-            }
-          ]
-        },
-        {
-          "type": "table",
-          "title": "Memory Used % per Node",
-          "id": 11,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [
-            {
-              "expr": "(node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / node_memory_MemTotal_bytes * 100"
-            }
-          ]
-        }
-      ],
-      "templating": { "list": [] }
-    }
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: monitoring-workloads-dashboard
-  labels:
-    grafana_dashboard: '1'
-data:
-  workloads.json: |-
-    {
-      "title": "Workloads",
-      "uid": "workloads",
-      "schemaVersion": 38,
-      "version": 1,
-      "refresh": "30s",
-      "panels": [
-        {
-          "type": "graph",
-          "title": "Deployments Available Replicas",
-          "id": 20,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [{ "expr": "sum(kube_deployment_status_replicas_available)" }]
-        },
-        {
-          "type": "graph",
-          "title": "DaemonSet Pods Ready",
-          "id": 21,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [{ "expr": "sum(kube_daemonset_status_number_ready)" }]
-        }
-      ],
-      "templating": { "list": [] }
-    }
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: monitoring-pods-dashboard
-  labels:
-    grafana_dashboard: '1'
-data:
-  pods.json: |-
-    {
-      "title": "Pods",
-      "uid": "pods",
-      "schemaVersion": 38,
-      "version": 1,
-      "refresh": "30s",
-      "panels": [
-        {
-          "type": "stat",
-          "title": "Pods Running",
-          "id": 30,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [{ "expr": "count(kube_pod_status_phase{phase='Running'})" }]
-        },
-        {
-          "type": "stat",
-          "title": "Pods Pending",
-          "id": 31,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [{ "expr": "count(kube_pod_status_phase{phase='Pending'})" }]
-        }
-      ],
-      "templating": { "list": [] }
-    }
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: monitoring-prometheus-overview-dashboard
-  labels:
-    grafana_dashboard: '1'
-data:
-  prometheus-overview.json: |-
-    {
-      "title": "Prometheus Overview",
-      "uid": "prometheus-overview",
-      "schemaVersion": 38,
-      "version": 1,
-      "refresh": "30s",
-      "panels": [
-        {
-          "type": "stat",
-          "title": "TSDB Head Series",
-          "id": 40,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [{ "expr": "sum(prometheus_tsdb_head_series)" }]
-        },
-        {
-          "type": "graph",
-          "title": "Prometheus WAL Fsync Time",
-          "id": 41,
-          "datasource": "${DS_PROMETHEUS}",
-          "targets": [
-            { "expr": "rate(prometheus_tsdb_wal_fsync_duration_seconds_sum[5m])" }
-          ]
-        }
-      ],
-      "templating": { "list": [] }
-    }
+  {{ base $path }}: |
+{{ $root.Files.Get $path | indent 4 }}
+{{- end }}
+{{- end }}
