--- a/deployments/monitoring/application.yaml
+++ b/deployments/monitoring/application.yaml
@@ -17,6 +17,8 @@ spec:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: monitoring
   syncPolicy:
     automated: {}
+    syncOptions:
+      - CreateNamespace=true
