--- a/deployments/monitoring/templates/dashboards-configmaps.yaml
+++ b/deployments/monitoring/templates/dashboards-configmaps.yaml
@@ -1,21 +1,16 @@
 {{- $labelKey := default "grafana_dashboard" .Values.dashboardLabelKey -}}
 {{- $labelValue := default "1" .Values.dashboardLabelValue -}}
 {{- $dashboards := .Files.Glob "dashboards/*.json" -}}
-{{- if $dashboards }}
-{{- $dashboardPaths := list -}}
 {{- range $path, $_ := $dashboards }}
-{{- $dashboardPaths = append $dashboardPaths $path -}}
-{{- end }}
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "monitoring.fullname" . }}-dashboards
+  name: {{ include "monitoring.fullname" $ }}-dashboard-{{ base $path | replace "." "-" | lower | trunc 63 | trimSuffix "-" }}
   labels:
-    {{- include "monitoring.labels" . | nindent 4 }}
+    {{- include "monitoring.labels" $ | nindent 4 }}
     {{ $labelKey }}: {{ $labelValue | quote }}
 data:
-{{- range $path := sortAlpha $dashboardPaths }}
   {{ base $path }}: |
-{{ printf "%s" (index $dashboards $path) | indent 4 }}
-{{- end }}
+{{ $.Files.Get $path | indent 4 }}
 {{- end }}
