fix: disable prometheus operator admission webhooks to resolve hook failure

--- a/deployments/monitoring/values.yaml
+++ b/deployments/monitoring/values.yaml
@@ -98,5 +98,7 @@ kube-prometheus-stack:
   ## Disable components you might not need
   prometheusOperator:
     admissionWebhooks:
-      enabled: true
+      enabled: false
+      patch:
+        enabled: false
     resources: {}
