--- a/deployments/monitoring/Chart.yaml
+++ b/deployments/monitoring/Chart.yaml
@@ -3,7 +3,7 @@ name: monitoring
 description: Lightweight monitoring stack for k3s using kube-prometheus-stack
 type: application
 version: 1.0.0
-appVersion: "1.0.0"
+appVersion: '1.0.0'
 dependencies:
   - name: kube-prometheus-stack
     version: 66.2.0
