--- a/deployments/monitoring/application.yaml
+++ b/deployments/monitoring/application.yaml
@@ -13,6 +13,7 @@ spec:
     targetRevision: main
     helm:
       releaseName: monitoring
+      dependencyUpdate: true
       valueFiles:
         - values.yaml
   destination:
