--- a/deployments/finances-frontend/application.yaml
+++ b/deployments/finances-frontend/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: finances-frontend
   namespace: elliott-haus
 spec:
-  project: home
+  project: elliott-haus
   source:
     repoURL: https://github.com/ethanelliott/ethanelliott.ca.git
     path: deployments/finances-frontend
