--- a/deployments/test-server/application.yaml
+++ b/deployments/test-server/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: test-server
   namespace: elliott-haus
 spec:
-  project: home
+  project: elliott-haus
   source:
     repoURL: https://github.com/ethanelliott/ethanelliott.ca.git
     path: deployments/test-server
