--- a/deployments/primary-application.yaml
+++ b/deployments/primary-application.yaml
@@ -11,7 +11,7 @@ spec:
     path: deployments
     directory:
       recurse: true
-      include: '{*/application.yaml,elliott-haus-project.yaml}'
+      include: '*/application.yaml'
       exclude: 'primary-application.yaml'
   destination:
     server: https://kubernetes.default.svc
