--- a/deployments/landing-page/templates/ingress.yaml
+++ b/deployments/landing-page/templates/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   name: {{ include "landing-page.fullname" . }}
   labels:
     {{- include "landing-page.labels" . | nindent 4 }}
+  annotations:
+    link.argocd.argoproj.io/external-link: https://{{ .Values.ingress.hostname }}
 spec:
   entryPoints:
     - websecure
