--- a/apps/finances-frontend/project.json
+++ b/apps/finances-frontend/project.json
@@ -26,6 +26,9 @@
           "node_modules/@fortawesome/fontawesome-free/css/all.css",
           "apps/finances-frontend/src/styles.scss"
         ],
+        "stylePreprocessorOptions": {
+          "includePaths": ["apps/finances-frontend/src"]
+        },
         "scripts": []
       },
       "configurations": {
