build build build

--- a/apps/finances-frontend/project.json
+++ b/apps/finances-frontend/project.json
@@ -45,6 +45,16 @@
               "maximumError": "1mb"
             }
           ],
+          "optimization": {
+            "scripts": true,
+            "styles": {
+              "minify": true,
+              "inlineCritical": true
+            },
+            "fonts": {
+              "inline": false
+            }
+          },
           "outputHashing": "all"
         },
         "development": {
