--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
           version: 8
       - uses: actions/setup-node@v3
         with:
+          node-version: 24
           cache: 'pnpm'
       - run: pnpm install
       - run: pnpm exec nx affected -t lint build
