--- a/apps/finances-frontend/project.json
+++ b/apps/finances-frontend/project.json
@@ -96,13 +96,17 @@
         "spa": true
       }
     },
-    "docker-build": {
+    "container": {
       "dependsOn": ["build"],
-      "command": "docker build -f apps/finances-frontend/Dockerfile . -t ethanelliottio/finances-frontend:latest"
-    },
-    "docker-push": {
-      "dependsOn": ["docker-build"],
-      "command": "docker push ethanelliottio/finances-frontend:latest"
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "docker build -f apps/finances-frontend/Dockerfile -t ethanelliottio/finances-frontend:{args.tag} -t ethanelliottio/finances-frontend:latest .",
+          "docker push ethanelliottio/finances-frontend:{args.tag}",
+          "docker push ethanelliottio/finances-frontend:latest"
+        ],
+        "parallel": false
+      }
     }
   }
 }
