--- a/nx.json
+++ b/nx.json
@@ -110,5 +110,28 @@
         "targetName": "eslint:lint"
       }
     }
-  ]
+  ],
+  "release": {
+    "projects": ["apps/*"],
+    "version": {
+      "conventionalCommits": true,
+      "generatorOptions": {
+        "currentVersionResolver": "git-tag",
+        "specifierSource": "conventional-commits"
+      }
+    },
+    "changelog": {
+      "workspaceChangelog": {
+        "createRelease": "github",
+        "file": "CHANGELOG.md"
+      },
+      "projectChangelogs": {
+        "file": "CHANGELOG.md"
+      }
+    },
+    "git": {
+      "commit": true,
+      "tag": true
+    }
+  }
 }
